# serialization-bench

./: Cargo.toml  README.md
src/: broli.rs  deflate.rs  gzip.rs  lz4.rs  main.rs  snap.rs  types.rs  zlib.rs
