[package]
name = "compression-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = {version = "1.5.3", features = ["derive", "std"]}
brotli = "7.0.0"
prettytable-rs = "0.10.0"
serde = {version = "1.0.216", features = ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.133"
